--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/MealBox.png
+    - assets/images/MealBoxLogo.png
     - assets/images/google.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
